# sayi-tahmin

./: CMakeLists.txt  README  README.md  TODO  sayi-tahmin.cpp  tr.po
trunk/: README  TODO  sayi-tahmin.cpp  sayi-tahmin.desktop  sayi-tahmin.pot  tr.po
wiki/: sayitahminozet.wiki
